--- a/常用代码段/01星级评价3/index.html
+++ b/常用代码段/01星级评价3/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-
 <html lang="en">
 
 <head>
@@ -13,17 +11,21 @@
 </head>
 
 <body>
-<div class="imgbox">
-    <div class="probox">
-        <img src="http://www.jq22.com/demo/jpgZoo20160421/images/img01.jpg" alt="" />
-        <div class="hoverbox"></div>
-    </div>
-    <div class="showbox">
-        <img src="http://www.jq22.com/demo/jpgZoo20160421/images/img01.jpg" alt="" />
-    </div>
-</div>
-
+<ul>
+	<li title="一星差评，呵呵呵，差的忍无可忍！！！"></li>
+	<li title="二星差评"></li>
+	<li title="三星差评"></li>
+	<li title="四星中评"></li>
+	<li title="五星中评"></li>
+	<li title="六星中评"></li>
+	<li title="七星好评"></li>
+	<li title="八星好评"></li>
+	<li title="九星好评"></li>
+	<li title="十星满评！！！666,叼爆了！！！"></li>
+	<span></span>
+</ul>
     <script src="./index.js">
+        
     </script>
 </body>
 
