--- a/常用代码段/18鼠标悬停效果2/index.html
+++ b/常用代码段/18鼠标悬停效果2/index.html
@@ -13,15 +13,18 @@
 </head>
 
 <body>
-<div class="imgbox">
-    <div class="probox">
-        <img src="http://www.jq22.com/demo/jpgZoo20160421/images/img01.jpg" alt="" />
-        <div class="hoverbox"></div>
-    </div>
-    <div class="showbox">
-        <img src="http://www.jq22.com/demo/jpgZoo20160421/images/img01.jpg" alt="" />
-    </div>
+<section>
+  <div class="button">
+    <a class="twitter-follow-button" data-show-count="false" data-size="large">Follow @bennettfeely</a>
+  </div>
+  <div class="cover">
+    <div class="innie"></div>
+    <div class="spine"></div>
+    <div class="outie"></div>
 </div>
+  <div class="shadow"></div>
+</section>
+
 
     <script src="./index.js">
     </script>
