--- a/常用代码段/20图片放大镜功能2/index.html
+++ b/常用代码段/20图片放大镜功能2/index.html
@@ -13,14 +13,13 @@
 </head>
 
 <body>
-<div class="imgbox">
-    <div class="probox">
-        <img src="http://www.jq22.com/demo/jpgZoo20160421/images/img01.jpg" alt="" />
-        <div class="hoverbox"></div>
+<div id="box1">
+    <img src="http://www.jq22.com/img/cs/csx.png" />
+    <div id="mark">
     </div>
-    <div class="showbox">
-        <img src="http://www.jq22.com/demo/jpgZoo20160421/images/img01.jpg" alt="" />
-    </div>
+</div>
+<div id="box2">
+    <img src="http://www.jq22.com/img/cs/csbg.png" />
 </div>
 
     <script src="./index.js">
