--- a/常用代码段/23简单hoverTab选项卡/index.html
+++ b/常用代码段/23简单hoverTab选项卡/index.html
@@ -13,14 +13,15 @@
 </head>
 
 <body>
-<div class="imgbox">
-    <div class="probox">
-        <img src="http://www.jq22.com/demo/jpgZoo20160421/images/img01.jpg" alt="" />
-        <div class="hoverbox"></div>
-    </div>
-    <div class="showbox">
-        <img src="http://www.jq22.com/demo/jpgZoo20160421/images/img01.jpg" alt="" />
-    </div>
+<div class="container">
+  <ul class="tab clearfix">
+    <li class="sel aa"> 选项1 </li>
+    <li class="aa"> 选项2 </li>
+    <li class="aa"> 选项3 </li>
+  </ul>
+  <div class="con sel"> 内容1 </div>
+  <div class="con"> 内容2 </div>
+  <div class="con"> 内容3 </div>
 </div>
 
     <script src="./index.js">
