--- a/常用代码段/23简单hoverTab选项卡2/index.html
+++ b/常用代码段/23简单hoverTab选项卡2/index.html
@@ -13,14 +13,18 @@
 </head>
 
 <body>
-<div class="imgbox">
-    <div class="probox">
-        <img src="http://www.jq22.com/demo/jpgZoo20160421/images/img01.jpg" alt="" />
-        <div class="hoverbox"></div>
-    </div>
-    <div class="showbox">
-        <img src="http://www.jq22.com/demo/jpgZoo20160421/images/img01.jpg" alt="" />
-    </div>
+<div class="centera">
+  <p id="oranger"> 
+	  <a class="hover" href="javascript:;">内容一</a> 
+	  <a href="javascript:;">内容二</a> 
+	  <a href="javascript:;">内容三</a> <a href="javascript:;">内容四</a> 
+  </p>
+  <div id="tablea" class="tablea">
+    <div class="box">1111</div>
+    <div class="box">2222</div>
+    <div class="box">3333</div>
+    <div class="box">4444</div>
+  </div>
 </div>
 
     <script src="./index.js">
