--- a/常用代码段/25顶部广告滑出/index.html
+++ b/常用代码段/25顶部广告滑出/index.html
@@ -13,15 +13,12 @@
 </head>
 
 <body>
-<div class="imgbox">
-    <div class="probox">
-        <img src="http://www.jq22.com/demo/jpgZoo20160421/images/img01.jpg" alt="" />
-        <div class="hoverbox"></div>
-    </div>
-    <div class="showbox">
-        <img src="http://www.jq22.com/demo/jpgZoo20160421/images/img01.jpg" alt="" />
-    </div>
+<img src="http://www.jq22.com/img/cs/500x300a.png" alt="" id="ad" />
+<div id="main">
+   这里是内容
 </div>
+
+
 
     <script src="./index.js">
     </script>
