--- a/常用代码段/05简易轮播图3/index.html
+++ b/常用代码段/05简易轮播图3/index.html
@@ -11,9 +11,20 @@
 </head>
 
 <body>
-<ul class="ul_btn"></ul>
-<input type="hidden" value="1" id="inp_page">
-<input type="hidden" value="10" id="inp_allPage">
+<div id="banner">
+    <ul id="banner_list">
+        <li><img src="http://www.jq22.com/img/cs/500x300.png"></li>
+        <li><img src="http://www.jq22.com/img/cs/500x300a.png"></li>
+        <li><img src="http://www.jq22.com/img/cs/500x300b.png"></li>
+        <li><img src="http://www.jq22.com/img/cs/500x300c.png"></li>
+    </ul>
+    <ul id="btn">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+    </ul>
+</div>
     <script src="./index.js">
     </script>
 </body>
