--- a/常用代码段/36简单的鼠标悬停商品预览和介绍效果/index.html
+++ b/常用代码段/36简单的鼠标悬停商品预览和介绍效果/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+
 <html lang="en">
 
 <head>
@@ -11,11 +13,10 @@
 </head>
 
 <body>
-<ul class="ul_btn"></ul>
-<input type="hidden" value="1" id="inp_page">
-<input type="hidden" value="10" id="inp_allPage">
-    <script src="./index.js">
-    </script>
+<div class="content">
+    <a href="#"><img src="http://www.jq22.com/demo/jQuery-banner201703062207/img/a4.png"></a>
+    <a href="#" class="note">小学篱笆旁的蒲公英 是记忆里有味道的风景 午睡操场传来蝉的声音</a>
+</div>
+	<script src="./index.js"></script>
 </body>
-
 </html>
