--- a/常用代码段/37css 开门见山/index.html
+++ b/常用代码段/37css 开门见山/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+
 <html lang="en">
 
 <head>
@@ -11,11 +13,10 @@
 </head>
 
 <body>
-<ul class="ul_btn"></ul>
-<input type="hidden" value="1" id="inp_page">
-<input type="hidden" value="10" id="inp_allPage">
-    <script src="./index.js">
-    </script>
+<div class="door">
+    <div class="left"></div>
+    <div class="right"></div>
+</div>
+	<script src="./index.js"></script>
 </body>
-
 </html>
