--- a/常用代码段/03简易分页功能实现/index.html
+++ b/常用代码段/03简易分页功能实现/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-<ul class="ul_btn"></ul>
-<input type="hidden" value="1" id="inp_page">
-<input type="hidden" value="10" id="inp_allPage">
+    <div style="text-align:center">
+        <div class="pager"></div>
+    </div>
     <script src="./index.js">
     </script>
 </body>
