--- a/常用代码段/25顶部广告滑出--ok/index.html
+++ b/常用代码段/25顶部广告滑出--ok/index.html
@@ -7,24 +7,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>星级评价</title>
+    <title>顶部广告</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
     <script src="http://www.jq22.com/jquery/jquery-2.1.1.js"></script>
 </head>
 
 <body>
-<p>点我</p>
-<p>点我</p>
-<p>点我</p>
-<p>点我</p>
-<p>点我</p>
-<p>点我</p>
-<p>点我</p>
-<p>点我</p>
-<p>点我</p>
-<p>点我</p>
-<p>点我</p>
-<p>点我</p>
+<div id="ad">
+    这里是广告
+</div>
+<div id="main">
+   这里是内容
+</div>
 
 
 
