--- a/常用代码段/28点击数字上升效果--ok/index.html
+++ b/常用代码段/28点击数字上升效果--ok/index.html
@@ -13,10 +13,15 @@
 </head>
 
 <body>
-<img src="http://www.jq22.com/img/cs/500x300a.png" alt="" id="ad" />
-<div id="main">
-   这里是内容
+<div class="J-itemcontainer">
+    <p class="item">点我</p>
+    <p class="item">点我</p>
+    <p class="item">点我</p>
+    <p class="item">点我</p>
+    <p class="item">点我</p>
+    <p class="item">点我</p>
 </div>
+
 
 
 
