--- a/常用代码段/19回到顶部/index.html
+++ b/常用代码段/19回到顶部/index.html
@@ -7,17 +7,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>星级评价</title>
+    <title>回到顶部</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
     <script src="http://www.jq22.com/jquery/jquery-2.1.1.js"></script>
 </head>
 
 <body>
 <h1 id="anchor">Lorem Ipsum</h1>
-<p class="t"><a href="#anchor" class="topLink">Back to Top</a></p>
+<p class="back-top"><a href="#anchor" class="topLink">Top</a></p>
 
-    <script src="./index.js">
-    </script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
